--- a/content/13th week.html
+++ b/content/13th week.html
@@ -152,6 +152,8 @@ init_mathjax();
     <div id="tipue_search_content">temperature << <a href='temperature.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>13th week</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0RtGLI-pglg" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/r_5GxQ0wICo" width="560"></iframe></p>
+<p><span color="blue" style="color: blue;">請輸入所要轉換的溫度<br/>以數字加上 C 或 F:<br/></span><br/><input id="temp" max="30" min="1" type="text" value="20F"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p>
+<script src="./../downloads/temperature2.js"></script>
 <br />temperature << <a href='temperature.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
         
     <!-- footer -->
